--- a/fileEM/config/config.yaml
+++ b/fileEM/config/config.yaml
@@ -1,4 +1,4 @@
 wos:
-  sid_path: '~/.config/fileEx/wos/sid'
-  sql_path: '~/.config/fileEx/wos/wos.yaml'
+  sid_path: '~/.config/fileEm/wos/sid'
+  sql_path: '~/.config/fileEm/wos/wos.yaml'
   viewer: zathura
